--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -106,6 +106,7 @@
 
 <body>
 
+    <!-- mt-0 w-100 m-0 rounded-0 -->
 
     <nav class="navbar navbar-expand-lg navbar-custom">
         <div class="container-fluid">
