changes the home page

--- a/templates/home/team.html
+++ b/templates/home/team.html
@@ -12,6 +12,11 @@ Our Team | Angaar
 
 <style>
 
+    body{
+        background-color: #0d0d0d;
+
+    }
+
     /* Team Page Container */
     .team-page-container {
         position: relative;
