--- a/templates/administration/practice/driver_code.html
+++ b/templates/administration/practice/driver_code.html
@@ -98,9 +98,6 @@ Driver Code | {{ question.title }}
             <a href="{% url 'test_code' question.slug %}" class="btn btn-info float-end mx-3">TEST CODE NOW</a>
         </div>
 
-
-
-
         <div class="card-body p-4">
             <form method="post">
 
@@ -135,7 +132,8 @@ Driver Code | {{ question.title }}
                     <div id="editor-complete"></div>
                 </div>
 
-                <button type="submit" class="btn btn-dark w-100">Submit Driver Code</button>
+                <button type="submit" class="btn btn-dark w-100" id="driver-code-submit-btn">Submit Driver Code</button>
+
             </form>
 
         </div>
@@ -147,6 +145,8 @@ Driver Code | {{ question.title }}
 
 <script>
     $(document).ready(function () {
+
+        const submitBtn = document.getElementById("driver-code-submit-btn");
 
         // =================== SHOW COMPLETE DRIVER CODE SWITCH ===================
 
@@ -271,7 +271,8 @@ Driver Code | {{ question.title }}
         // Form submission logic
         $("form").submit(function (event) {
 
-            console.log("Entered in the form submission");
+            submitBtn.disabled = true; // Disable the submit button
+            submitBtn.innerHTML = "Submitting..."; // Change the submit button text
 
             if (isSubmitting) {
                 return false;  // If already submitting, exit and prevent further submissions
@@ -313,6 +314,8 @@ Driver Code | {{ question.title }}
                         alert(response.message); // Or you can display it in a dedicated message div
                     }
                     isSubmitting = false; // Reset the flag after completion
+                    submitBtn.disabled = false; // Enable the submit button
+                    submitBtn.innerHTML = "Submit Driver Code"; // Reset the submit button text
                 },
                 error: function (xhr, status, error) {
                     console.log("Error: ", error);
