--- a/templates/administration/practice/test_code.html
+++ b/templates/administration/practice/test_code.html
@@ -240,6 +240,24 @@ Test Code | {{ question.title }}
             <code> <small>{{ question.constraints|linebreaks }}</small></code>
         </div>
 
+        {% autoescape off %}
+
+        <div class="card-body mb-n7">
+            <h6 class="card-title fs-4">Input Format:</h6>
+            <code>{{ question.input_format|linebreaks }}</code>
+        </div>
+
+        {% endautoescape %}
+
+        {% autoescape off %}
+
+        <div class="card-body mb-n7">
+            <h6 class="card-title fs-4">Output Format:</h6>
+            <code>{{ question.output_format|linebreaks }}</code>
+        </div>
+
+        {% endautoescape %}
+
         <div class="card-body">
 
             {% for test_case in sample_test_cases %}
